Fixed weird spacing bug for hover in Contact tabs; fixed IE11 bu with transparent background on flex blocks in Contact/Training modals; fixed overlap/confusion with subject labels and subject line values from Labels object.

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -5,11 +5,15 @@ $spacing: 20px;
   border-radius: 5px;
   background-color: $white;
   color: $yellow-sea;
-  font-size: 18px;
   font-weight: bold;
-  height: auto;
-  padding: 10px 40px;
+  height: 48px;
+  font-size: 14px;
+  padding: 10px 10px;
   margin-top: 1rem;
+  @include media('>=tablet') {
+    font-size: 18px;
+    padding: 10px 20px;
+  }
 }
 
 .contact-page {
@@ -73,10 +77,11 @@ $spacing: 20px;
       }
     }
     .view-toggle-container {
+      height: 64px;
       button {
         @include button-ui;
         margin-bottom: -3px;
-        padding: 10px 20px;
+        // padding: 10px 20px;
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
         // border-bottom: 3px solid $white;
@@ -405,7 +410,7 @@ $spacing: 20px;
         }
         .content-container {
           display: flex;
-          flex: 1 1 0;
+          flex: 1 1 auto;
           width: 100%;
           flex-direction: column;
           background: $white;
@@ -416,6 +421,7 @@ $spacing: 20px;
             margin: 0 auto;
             padding-left: 10px;
             padding-right: 10px;
+            background-color: $white;
             @include media('>=tablet') {
               padding-left: 100px;
               padding-right: 100px;
@@ -430,7 +436,6 @@ $spacing: 20px;
             .contact-form {
               button {
                 &.disabled {
-                  // opacity: 0.5;
                   color: $grey30;
                   border: 4px solid $grey30;
                 }
@@ -472,6 +477,9 @@ $spacing: 20px;
                 flex-direction: row;
                 justify-content: space-between;
                 margin-bottom: 2px;
+                @include media('>=tablet') {
+                  width: 400px;
+                }
               }
               .required {
                 font-size: 12px;
